--- a/index.html
+++ b/index.html
@@ -8,44 +8,52 @@
     <link rel="shortcut icon" href="#">
 </head>
 <body>
+    <div class="initial_page">
+        <div class="atom_icon"></div>
 
-    <header class="main_opitions add_transition">
-            <h1 class="logo">Nome</h1>
+        <div class="about">
+            <div class="main_image">
+                <img src="./imagem.src/quimico.png" alt="">
+            </div>
+            <div class="explicacao">
+                <h1 class="tema">Química Geral</h1><br>
+                <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+               Voluptate sapiente labore amet consequuntur, voluptas et 
+               cum iusto nam voluptatum, consequatur, voluptatibus neque.
+               In dolor repellat error eius minus dolore corrupti.</p>
+            </div>
+        </div>
+
+        <div class="align_center">
+            <nav>
+                <ul class="nav_content">
+                    <li class="transition_buttom"><a class="access_content" href="#">Acessar Conteudo</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+
+    <header class="main_opitions">
+            <img class="logo" src="./imagem.src/fisica.png" alt="">
             <nav>
                 <ul class="main_menu">
-                    <li><a class="opition_home opition_nav" href="#">Home</a></li>
-                    <li><a class="opition_1 opition_nav" href="#">Tema1</a></li>
-                    <li><a class="opition_2 opition_nav" href="#">Tema2</a></li>
-                    <li><a class="opition_3 opition_nav" href="#">Tema3</a></li>
-                    <li><a class="opition_4 opition_nav" href="#">Tema4</a></li>
-                    <li><a class="opition_5 opition_nav" href="#">Tema5</a></li>
+                    <li class="border_bottom"><a class="opition_home opition_nav" href="#">Home</a></li>
+                    <li class="border_bottom"><a class="opition_1 opition_nav" href="#">Tema1</a></li>
+                    <li class="border_bottom"><a class="opition_2 opition_nav" href="#">Tema2</a></li>
+                    <li class="border_bottom"><a class="opition_3 opition_nav" href="#">Tema3</a></li>
+                    <li class="border_bottom"><a class="opition_4 opition_nav" href="#">Tema4</a></li>
+                    <li class="border_bottom"><a class="opition_5 opition_nav" href="#">Tema5</a></li>
                 </ul>
             </nav>
     </header>
 
-    <div class="home_screen active">
-        <h1 class="nome">Nome</h1><br>
-        <h2 class="about">Site voltado aos conceitos iniciais da Química Geral</h2><br>
-        <nav>
-            <ul class="initial_opitions">
-                <li class="transition_opition"><a class="conteudo" href="#">Conteúdo</a></li>
-            </ul>
-            <div class="menu_box">
-                <ul class="transition_main">
-                    <li class="themes"><a class="first_theme" href="#">Tema1</a></li>
-                    <li class="themes"><a class="second_theme" href="#">Tema2</a></li>
-                    <li class="themes"><a class="third_theme" href="#">Tema3</a></li>
-                    <li class="themes"><a class="fourth_theme" href="#">Tema4</a></li>
-                    <li class="themes"><a class="fifth_theme " href="#">Tema5</a></li>
-                </ul>
-            </div>
-        </nav>
+    <div class="sections">
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
     </div>
-
-    <section class="content_area">
-
-    </section>
-
 
     <script type="text/javascript" src="animation.js"></script>
     
