--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Projeto Integrador</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./style.css">
         <link rel="shortcut icon" href="#">
     </head>
     <body>
@@ -22,7 +22,7 @@
             </div>
 
             <div class="about">
-                <div class="about_content nav_content">
+                <div id="page1Btn" class="about_content nav_content">
                     <img class="logo" src="./imagem.src/fisica.png" alt="">
                     <div class="explanation_content">
                         <h3 class="title">Física</h3><br>
@@ -33,7 +33,7 @@
                     </div>
                 </div>
 
-                <div class="about_content nav_content">
+                <div id="page2Btn" class="about_content nav_content">
                     <img class="logo" src="./imagem.src/estrutura-hierarquica.png" alt="">
                     <div class="explanation_content">
                         <h3 class="title">Estrutura de Dados</h3><br>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                     
-                <div class="about_content nav_content">
+                <div id="page3Btn" class="about_content nav_content">
                     <img class="logo" src="./imagem.src/quimica.png" alt="">
                     <div class="explanation_content">
                         <h3 class="title">Química</h3><br>
@@ -58,7 +58,7 @@
         </div>
 
         <header class="main_opitions">
-            <img class="logo_header opition_home" src="./imagem.src/tecnologia.png" alt="">
+            <img class="logo_header option_home" src="./imagem.src/tecnologia.png" alt="">
                 <nav>
                     <ul class="main_menu">
                         <li class="border_bottom"><a class="opition_1 opition_nav" href="#">Física</a></li>
@@ -69,12 +69,34 @@
         </header>
 
         <div class="sections">
-            <section id="page_fisica"></section>
-            <section id="page_quimica"></section>
-            <section id="page_estrutura"></section>
+
+            <section id="page_fisica" class="section_content">
+                <div class="center_container">
+                    <div class="canvas_container">
+                        <div id="stateButton" class="spheres_button">
+                            Iniciar Simulação
+                        </div>
+                        <canvas id="myCanvas" width="1200" height="600"></canvas>
+                    </div>
+                </div>
+            </section>
+
+            <section id="page_quimica" class="section_content">
+                <div style="color: white;">
+                    page quimica
+                </div>
+            </section>
+
+            <section id="page_estrutura" class="section_content">
+                <div style="color: white;">
+                    page estrutura
+                </div>
+            </section>
+
         </div>
 
-        <script type="text/javascript" src="animation.js"></script>
+        <script type="text/javascript" src="./animation.js"></script>
+        <script type="text/javascript" src="./simulationScript.js"></script>
         
     </body>
 </html>
