Correção da navegacao e implementacao dos botoes do header

--- a/index.html
+++ b/index.html
@@ -57,13 +57,19 @@
             </div>
         </div>
 
-        <header class="main_opitions">
+        <header class="main_options">
             <img class="logo_header option_home" src="./imagem.src/tecnologia.png" alt="">
                 <nav>
-                    <ul class="main_menu">
-                        <li class="border_bottom"><a class="opition_1 opition_nav" href="#">Física</a></li>
-                        <li class="border_bottom"><a class="opition_2 opition_nav" href="#">Estrutura de Dados</a></li>
-                        <li class="border_bottom"><a class="opition_3 opition_nav" href="#">Química</a></li>
+                    <ul id="header_container" class="main_menu">
+                        <li class="border_bottom">
+                            <a id="header1Btn" class="option_1 option_nav" href="#">Física</a>
+                        </li>
+                        <li class="border_bottom">
+                            <a id="header2Btn" class="option_2 option_nav" href="#">Estrutura de Dados</a>
+                        </li>
+                        <li class="border_bottom">
+                            <a id="header3Btn" class="option_3 option_nav" href="#">Química</a>
+                        </li>
                     </ul>
                 </nav>
         </header>
