Adição da pagina de quimica

--- a/index.html
+++ b/index.html
@@ -128,6 +128,34 @@
 
             <section id="page_quimica" class="section_content">
                 <div class="center_container">
+                    <h1>Tabela Periódica</h1>
+
+                    <span class="content_text">
+                        A tabela periódica é uma organização sistemática das espécies atômicas descobertas e onde é possível obter 
+                        informações sobre elas, como número atômico e número de massa. Além disso, ela possibilita o estabelecimento de 
+                        relações em torno das propriedades periódicas dos elementos, como raio atômico e eletronegatividade.
+                    </span>
+
+                    <span class="content_text">
+                        Criada por Dmitri Mendeleiev e atualizada por Julius Lothar Meyer, a versão atualizada contém 118 elementos 
+                        posicionados em ordem crescente de número atômico. Ela é estruturada em grupos (colunas) e períodos (linhas). 
+                        Cada grupo contém elementos com o mesmo número de elétrons na camada de valência, e os elementos de cada período possuem o mesmo número de camadas eletrônicas.
+                    </span>
+
+                    <h3 style="margin-top: 15px;">Família ou grupos</h3>
+
+                    <span class="content_text">
+                        As famílias ou grupos da tabela periódica são as colunas (classificadas de acordo com o número 
+                        de elétrons na camada de valência), ou seja, cada grupo comporta elementos com o mesmo número de 
+                        elétrons na camada de valência, consequentemente agrupa elementos com características físico-químicas em comum.
+                    </span>
+
+                    <h3 style="margin-top: 15px;">Períodos</h3>
+
+                    <span class="content_text">
+                        Período é a classificação dada na horizontal, em linhas, ordenadas de acordo com o número de camadas eletrônicas.
+                        No primeiro período, por exemplo, estão os elementos que comportam seus elétrons em apenas uma camada. São sete períodos ao todo.
+                    </span>
 
                     <div class="table-container">
                         <table id="table"></table>
